--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ version: "3.9"
 services:
   client:
     build: ./client
+    image: yoshi275/cs3219_a2_client:latest
     ports:
       - "8080:3000"
   server:
     build: ./server
+    image: yoshi275/cs3219_a2_server:latest
     environment:
       - PORT=5000
     ports:
