--- a/k8s/development/server-deployment.yaml
+++ b/k8s/development/server-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: a2_server
-          imagePullPolicy: Never
+          image: yoshi275/cs3219_a2_server:latest
+          imagePullPolicy: Always
           ports:
           - containerPort: 80
