--- a/k8s/development/web-service.yaml
+++ b/k8s/development/web-service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: client-service
+  name: web-service
   labels:
-    app: client
+    app: web-nginx
 spec:
   type: NodePort
   ports:
-  - port: 8080
+  - port: 80
     protocol: TCP
-    targetPort: 8080
+    targetPort: 80
   selector:
-    app: client
+    app: web-nginx
