--- a/k8s/development/web-deployment.yaml
+++ b/k8s/development/web-deployment.yaml
@@ -18,5 +18,12 @@ spec:
         - name: nginx
           image: nginx:1.21.4 
           imagePullPolicy: Always
+          resources:
+            requests:
+              memory: "10Mi"
+              cpu: "250m"
+            limits:
+              memory: "10Mi"
+              cpu: "250m"
           ports:
           - containerPort: 80
